# secret_santa_cpp

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  secret_santa.cpp  secret_santa.hpp
tests/: CMakeLists.txt  secret_santa_test.cpp
